@@ -1,18 +1,20 @@
 package vest.doctor.processor;
 
-import doctor.processor.ClassValueVisitor;
-import doctor.processor.Constants;
-import doctor.processor.ProcessorUtils;
+import jakarta.inject.Provider;
 import vest.doctor.AnnotationProcessorContext;
+import vest.doctor.CodeProcessingException;
 import vest.doctor.DoctorProvider;
 import vest.doctor.ExplicitProvidedTypes;
 import vest.doctor.Modules;
 import vest.doctor.ProviderDefinition;
 import vest.doctor.ProviderDependency;
 import vest.doctor.ProviderRegistry;
+import vest.doctor.codegen.AnnotationClassValueVisitor;
 import vest.doctor.codegen.ClassBuilder;
+import vest.doctor.codegen.Constants;
+import vest.doctor.codegen.MethodBuilder;
+import vest.doctor.codegen.ProcessorUtils;
 
-import javax.inject.Provider;
 import javax.lang.model.element.AnnotationMirror;
 import javax.lang.model.element.Element;
 import javax.lang.model.element.ElementKind;
@@ -22,19 +24,19 @@ import java.lang.annotation.Annotation;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collector;
 import java.util.stream.Collectors;
 
-import static doctor.processor.Constants.PROVIDER_REGISTRY;
-
 public abstract class AbstractProviderDefinition implements ProviderDefinition {
 
-    private static final Collector<CharSequence, ?, String> AS_LIST = Collectors.joining(", ", "Collections.unmodifiableList(java.util.Arrays.asList(", "))");
+    private static final Collector<CharSequence, ?, String> AS_LIST = Collectors.joining(", ", "List.of(", ")");
 
     protected final AnnotationProcessorContext context;
     protected final TypeElement providedType;
@@ -46,19 +48,33 @@ public abstract class AbstractProviderDefinition implements ProviderDefinition {
     protected final String uniqueName;
 
     public AbstractProviderDefinition(AnnotationProcessorContext context, TypeElement providedType, Element annotationSource) {
+        this(context, Collections.singletonList(providedType), annotationSource);
+    }
+
+    public AbstractProviderDefinition(AnnotationProcessorContext context, List<TypeElement> providedTypes, Element annotationSource) {
         this.context = context;
         this.annotationSource = annotationSource;
 
-        this.providedType = providedType;
+        if (providedTypes.isEmpty()) {
+            throw new IllegalArgumentException("providedType may not be empty");
+        }
+
+        this.providedType = providedTypes.get(0);
         ExplicitProvidedTypes explicitProvidedTypes = annotationSource.getAnnotation(ExplicitProvidedTypes.class);
         if (explicitProvidedTypes != null) {
             List<TypeElement> types = explicitTypes(context, annotationSource);
             if (types.isEmpty()) {
-                throw new IllegalArgumentException("explicitly defined types must not be empty: " + ProcessorUtils.debugString(annotationSource));
+                throw new CodeProcessingException("explicitly defined types must not be empty", annotationSource);
             }
             this.hierarchy = types;
         } else {
-            this.hierarchy = ProcessorUtils.hierarchy(context, providedType);
+            Set<TypeElement> uniqueTypes = providedTypes.stream()
+                    .map(te -> ProcessorUtils.hierarchy(context, te))
+                    .reduce(new LinkedHashSet<>(), (a, b) -> {
+                        a.addAll(b);
+                        return a;
+                    });
+            this.hierarchy = new LinkedList<>(uniqueTypes);
         }
 
         this.scope = ProcessorUtils.getScope(context, annotationSource);
@@ -134,28 +150,26 @@ public abstract class AbstractProviderDefinition implements ProviderDefinition {
                 .addImportClass(ProviderRegistry.class)
                 .addImportClass(Provider.class)
                 .addImportClass(List.class)
-                .addImportClass(Collections.class)
                 .addImportClass(providedType().getQualifiedName().toString())
                 .addImportClass(DoctorProvider.class)
                 .addImplementsInterface(DoctorProvider.class.getSimpleName() + "<" + providedType().getSimpleName() + ">")
-                .addField("private final " + ProviderRegistry.class.getSimpleName() + " " + PROVIDER_REGISTRY)
+                .addField("private final ", ProviderRegistry.class.getSimpleName(), " {{providerRegistry}}");
 
-                .setConstructor("public {}({} {}) { this.{} = {}; }",
-                        generatedClassName().substring(generatedClassName().lastIndexOf('.') + 1), ProviderRegistry.class, PROVIDER_REGISTRY, PROVIDER_REGISTRY, PROVIDER_REGISTRY)
+        MethodBuilder constructor = classBuilder.newMethod("public ", generatedClassName().substring(generatedClassName().lastIndexOf('.') + 1), "(", ProviderRegistry.class, " {{providerRegistry}})");
+        constructor.line("this.{{providerRegistry}} = {{providerRegistry}};");
 
-                .addMethod("public Class<" + providedType().getSimpleName() + "> type() { " +
-                        "return " + providedType().getSimpleName() + ".class; }")
+        MethodBuilder type = classBuilder.newMethod("public Class<", providedType().getSimpleName(), "> type()");
+        type.line("return " + providedType().getSimpleName() + ".class;");
 
-                .addMethod("public String qualifier() { return " +
-                        Optional.ofNullable(qualifier()).map(q -> PROVIDER_REGISTRY + ".resolvePlaceholders(" + q + ")").orElse(null) + "; }")
+        MethodBuilder qualifier = classBuilder.newMethod("public String qualifier()");
+        qualifier.line("return ", Optional.ofNullable(qualifier()).map(q -> "{{providerRegistry}}.resolvePlaceholders(" + q + ")").orElse(null) + ";");
 
-                .addMethod("public Class<? extends Annotation> scope()", b -> {
-                    String scopeString = Optional.ofNullable(scope())
-                            .map(AnnotationMirror::getAnnotationType)
-                            .map(c -> c.asElement().toString() + ".class")
-                            .orElse("null");
-                    b.line("return " + scopeString + ";");
-                });
+        MethodBuilder scope = classBuilder.newMethod("public Class<? extends Annotation> scope()");
+        String scopeString = Optional.ofNullable(scope())
+                .map(AnnotationMirror::getAnnotationType)
+                .map(c -> c.asElement().toString() + ".class")
+                .orElse("null");
+        scope.line("return ", scopeString, ";");
 
         List<TypeElement> allProvidedTypes = getAllProvidedTypes();
         if (!allProvidedTypes.isEmpty()) {
@@ -163,20 +177,19 @@ public abstract class AbstractProviderDefinition implements ProviderDefinition {
                     .map(TypeElement::getQualifiedName)
                     .map(n -> n + ".class")
                     .collect(AS_LIST))
-                    .addMethod("public List<Class<?>> allProvidedTypes() { return allTypes; }");
+                    .addMethod("public List<Class<?>> allProvidedTypes()", b -> b.line("return allTypes;"));
         } else {
-            context().errorMessage("all providers must provide at least one type: " + this);
+            throw new CodeProcessingException("all providers must provide at least one type: " + this);
         }
 
         List<? extends AnnotationMirror> annotationMirrors = annotationSource().getAnnotationMirrors();
         if (!annotationMirrors.isEmpty()) {
-            classBuilder
-                    .addField("private final List<Class<? extends Annotation>> allAnnotations = " + annotationMirrors.stream()
-                            .map(AnnotationMirror::getAnnotationType)
-                            .map(DeclaredType::toString)
-                            .map(n -> n + ".class")
-                            .collect(AS_LIST))
-                    .addMethod("public List<Class<? extends Annotation>> allAnnotationTypes() { return allAnnotations; }");
+            classBuilder.addField("private final List<Class<? extends Annotation>> allAnnotations = " + annotationMirrors.stream()
+                    .map(AnnotationMirror::getAnnotationType)
+                    .map(DeclaredType::toString)
+                    .map(n -> n + ".class")
+                    .collect(AS_LIST))
+                    .addMethod("public List<Class<? extends Annotation>> allAnnotationTypes()", b -> b.line("return allAnnotations;"));
         }
 
         List<String> modules = modules();
@@ -188,7 +201,7 @@ public abstract class AbstractProviderDefinition implements ProviderDefinition {
                     .distinct()
                     .map(m -> '"' + m + '"')
                     .collect(AS_LIST))
-                    .addMethod("public List<String> modules() { return modules; }");
+                    .addMethod("public List<String> modules()", b -> b.line("return modules;"));
         }
 
         // must define the .get() method
@@ -207,7 +220,7 @@ public abstract class AbstractProviderDefinition implements ProviderDefinition {
                 .flatMap(am -> am.getElementValues().entrySet().stream())
                 .filter(e -> e.getKey().getSimpleName().toString().equals(Constants.ANNOTATION_VALUE))
                 .map(Map.Entry::getValue)
-                .map(val -> val.accept(new ClassValueVisitor(), null))
+                .map(AnnotationClassValueVisitor::getValues)
                 .flatMap(Collection::stream)
                 .map(context.processingEnvironment().getElementUtils()::getTypeElement)
                 .collect(Collectors.toList());
