@@ -1,5 +1,6 @@
 package vest.doctor.processor;
 
+import jakarta.inject.Singleton;
 import vest.doctor.Cached;
 import vest.doctor.CustomizationPoint;
 import vest.doctor.Factory;
@@ -7,21 +8,19 @@ import vest.doctor.ProcessorConfiguration;
 import vest.doctor.Prototype;
 import vest.doctor.ThreadLocal;
 
-import javax.inject.Singleton;
 import java.lang.annotation.Annotation;
-import java.util.Arrays;
 import java.util.List;
 
 public class DefaultProcessorConfiguration implements ProcessorConfiguration {
 
     @Override
     public List<Class<? extends Annotation>> supportedAnnotations() {
-        return Arrays.asList(Singleton.class, ThreadLocal.class, Prototype.class, Cached.class, Factory.class);
+        return List.of(Singleton.class, ThreadLocal.class, Prototype.class, Cached.class, Factory.class);
     }
 
     @Override
     public List<CustomizationPoint> customizationPoints() {
-        return Arrays.asList(
+        return List.of(
                 new InjectMethodsCustomizer(),
                 new EventConsumersWriter(),
                 new ScheduledMethodCustomizer(),
